--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "anhskohbo/no-captcha": "^3.1",
         "botble/assets": "^1.0",
         "bumbummen99/shoppingcart": "^2.8",
         "fideloper/proxy": "^4.0",
